--- a/W2-D5/Amazon Page/assets/mockup.html
+++ b/W2-D5/Amazon Page/assets/mockup.html
@@ -48,7 +48,9 @@
       </section>
     </main>
     <footer>
-      <h3><a href="#">Back to top</a></h3>
+      <div class="backToTop">
+        <h3><a href="#">Back to top</a></h3>
+      </div>
       <div class="footerlogo">
         <img src="./images/logo.png" alt="" />
       </div>
